--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "homepage": "https://github.com/flow-state-15/robinhood_clone#readme",
   "dependencies": {
     "lightweight-charts": "^3.7.0",
+    "nodejs-stock-info": "^0.1.20",
     "react-helmet": "^6.1.0",
     "react-tradingview-embed": "^2.2.6",
     "react-tradingview-technical-analysis": "^1.0.2",
-    "react-tradingview-widget": "^1.3.2"
+    "react-tradingview-widget": "^1.3.2",
+    "stock-info": "^1.5.1"
   }
 }
