--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "js-cookie": "^3.0.1",
-    "nodejs-stock-info": "^0.1.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-grid-system": "^8.0.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "stock-info": "^1.5.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
