--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-tradingview-embed": "^2.2.6",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0"
   },
