--- a/backend/.envexample
+++ b/backend/.envexample
@@ -1,7 +1,7 @@
-PORT=5000
-DB_USERNAME=auth_app
-DB_PASSWORD=«auth_app user password»
+PORT=8000
+DB_USERNAME=auth_admin
+DB_PASSWORD=password
 DB_DATABASE=auth_db
 DB_HOST=localhost
-JWT_SECRET=«generate_strong_secret_here»
+JWT_SECRET=generate_strong_secret_here
 JWT_EXPIRES_IN=604800
