--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/flow-state-15/robinhood_clone#readme",
   "dependencies": {
+    "axios": "^1.2.3",
     "lightweight-charts": "^3.7.0",
     "nodejs-stock-info": "^0.1.20",
     "react-helmet": "^6.1.0",
