--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   "homepage": "https://github.com/flow-state-15/robinhood_clone#readme",
   "dependencies": {
     "axios": "^1.2.3",
+    "express": "^4.18.2",
     "lightweight-charts": "^3.7.0",
     "nodejs-stock-info": "^0.1.20",
     "react-helmet": "^6.1.0",
     "react-tradingview-embed": "^2.2.6",
     "react-tradingview-technical-analysis": "^1.0.2",
     "react-tradingview-widget": "^1.3.2",
-    "stock-info": "^1.5.1"
+    "redis": "^4.6.4",
+    "stock-info": "^1.5.1",
+    "ws": "^8.12.1"
   }
 }
